[project]
name = "themestartpredictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers[torch]>=4.53.2",
]
[tool.uv]
required-environments=[
    "sys_platform  == 'darwin' or sys_platform == 'win32'"
]
